--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,400i,700,800i&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Sen:400,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,400i,700,700i&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@0;1&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@900&display=swap');
+
+$theme-colour: red;
+
 * {
   /*Box Sizing*/
   margin: 0;
@@ -23,19 +33,22 @@
 }
 html {
   font-size: 100%;
-  font-family: sans-serif;
+  font-family: "Roboto", "Tahoma", sans-serif;
   -webkit-text-size-adjust: 100%;
   line-height: 1.6em;
 }
 
 body {
   header {
+    font-family: "Barlow Semi Condensed", sans-serif;
     display: flex;
     align-items: center;
     width: 100%;
     max-width: 1200px;
     margin:auto;
     padding: 0.5rem;
+    height: 40px;
+    font-size:0.85rem;
     nav {
       width: 100%;
       ul {
@@ -63,28 +76,57 @@ body {
     }
   }
   main {
-    width:95%;
-    max-width:1200px;
-    margin:1rem auto;
+    width:100%;
+    padding:3rem 0;
+    min-height:calc(200vh - 120px);
+    h1 {
+      margin-bottom:1em;
+      font-family: "Barlow Semi Condensed", sans-serif;
+    }
+
+    div {
+      width:90%;
+      max-width:40rem;
+      margin:auto;
+    }
+    .basic {
+      .post-snippet {
+        padding-left:0.875rem;
+        border-left:0.125rem solid rgba($theme-colour, 0);
+        &:hover {
+          border-left:0.125rem solid $theme-colour;
+        }
+        h2 {
+          margin-bottom:1rem;
+          font-family: "Barlow Semi Condensed", sans-serif;
+        }
+        p {
+          font-size:1rem;
+          line-height:1.6em;
+        }
+      }
+    }
     .essay {
-      font-family:sans-serif;
+      font-family:"Lora", "Georgia", sans-serif;
+
     }
     .post {
-      width:100%;
-      max-width:40rem;
+
     }
   }
   footer {
+    font-family: "Barlow Semi Condensed", sans-serif;
     display:flex;
     flex-direction:row;
     align-items:center;
     justify-content:space-between;
     width:100%;
-    padding:2rem 5%;
-    border-top:1px solid #aaa;
-    color:#aaa;
+    height:80px;
+    border-top:1px dotted #888;
+    color:#888;
     max-width:1200px;
     margin:1rem auto 0;
+    font-size:0.85rem;
     .about {
     }
     .contact {
