--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     {% feed_meta %}
     {% seo %}
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+
+    </script>
+    <script type="text/javascript" src="/assets/js/styleselect.js">
+
+    </script>
   </head>
   <body>
     {% include nav.html %}
