--- a/_layouts/essay.html
+++ b/_layouts/essay.html
@@ -3,11 +3,11 @@ layout: default
 category: essay
 ---
 
-<div class="essay">
-  <h1> {{ page.title}} </h1>
-  <p> {{ page.date | date_to_string}} - {{ page.author }} - {{ page.course }}</p>
+<div class="essay" id="">
+  <h1>{{ page.title}} </h1>
+  <p class="essay-byline">{{ page.date | date_to_string}} - {{ page.author }} - {{ page.course }}</p>
 
-  <h2> {{ page.essay-question}}</h2>
+  <h2>{{ page.essay-question}}</h2>
 
   {{ content }}
 
