--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
     {% feed_meta %}
     {% seo %}
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
 
     </script>
-    <script type="text/javascript" src="/assets/js/styleselect.js">
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/styleselect.js">
 
     </script>
   </head>
