--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
     <ul>
       {% for item in site.data.nav %}
         <li>
-          <a href="{{item.link}}" {% if page.url == item.link %} class="current" {% endif %}>
+          <a href="{{ site.baseurl}}{{item.link}}" {% if page.url == item.link %} class="current" {% endif %}>
           {{ item.name }}
           </a>
         </li>
