--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,8 @@ layout: default
 
 <div class="post">
   <h1> {{ page.title}} </h1>
-  <p> {{ page.date | date_to_string}} - {{ page.author }}</p>
-
+  <p class="post-byline"> {{ page.date | date_to_string}} - {{ page.author }}</p>
+  <div class="post-body">
   {{ content }}
+  </div>
 </div>
