--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
     <h4>Scott Belcher + 2020</h4>
   </div>
   <div class="break contact">
-    <span><i>email</i></span>
-    <span><i>twitter</i></span>
-    <span><i>something else</i></span>
+    <a href="mailto:scottbelcher@live.com.au"><i class="email icon"></i></a>
+    <a href="https://twitter.com/scottxbee"><i class="twitter icon"></i></a>
+    <a href="{{ site.baseurl }}/"><i class="sxb icon"></i></a>
   </div>
 </footer>
