--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <base href="{{ site.baseurl}}" target="_self">
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/favicon.ico">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/icons/favicon.ico">
     {% feed_meta %}
     {% seo %}
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
