--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,19 +50,21 @@ html {
 body {
   background:white;
   z-index:10;
+
   > header {
     font-family: "Barlow Semi Condensed", sans-serif;
     background:white;
     display: flex;
     align-items: center;
-    width: 100%;
     max-width: 1200px;
     margin:auto;
     padding: 0.5rem;
     height: 40px;
     font-size:0.85rem;
+    position:relative;
     nav {
       width: 100%;
+      top:0;
       ul {
         display: flex;
         flex-direction: row;
@@ -88,7 +90,6 @@ body {
     }
   }
   > main {
-    width:100%;
     min-height:calc(100vh - 136px);
     h1 {
       margin-bottom:1em;
@@ -183,13 +184,13 @@ body {
         }
         header {
           border-bottom: 1px solid $theme-colour;
-          padding: 1rem 0;
+          padding: 1rem;
           background: white;
           .title {
             display: flex;
             justify-content: center;
             flex-direction: column;
-            padding:1rem;
+            margin:1rem 0;
             h1 {
               text-align:left;
               margin-bottom:0;
@@ -208,7 +209,6 @@ body {
           }
           .contact-info {
             text-align: right;
-            padding:0 1rem;
             a {
               display: block;
               text-decoration: none;
@@ -234,7 +234,6 @@ body {
             font-style: italic;
           }
           div {
-            padding: 0 0.25rem;
             width:unset;
             max-width: none;
             margin:0;
@@ -263,7 +262,7 @@ body {
                   }
                 }
                 .description {
-                  padding: 0.5rem 0.25rem;
+                  padding: 0.5rem 0;
                 }
                 .contact {
                   display: inline-block;
@@ -282,7 +281,7 @@ body {
               display: flex;
               ul {
                 li {
-                  margin: 0.75rem 0 0.75rem 0.5rem;
+                  margin: 0.75rem 0 0.75rem;
                   &:last-of-type {
                     margin-bottom: 0;
                   }
@@ -426,7 +425,6 @@ body {
     flex-direction:row;
     align-items:center;
     justify-content:space-between;
-    width:100%;
     height:80px;
     border-top:1px dotted #888;
     color:#888;
