fixed referencing style

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -159,6 +159,9 @@ body {
           font-size:0.9rem;
           line-height:1.6em;
         }
+        .references {
+          font-size:0.8em;
+        }
       }
     }
     .cv {
