added files folder + example

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -142,7 +142,7 @@ body {
         color:#333;
         text-decoration:none;
       }
-      .essay-snippet, .design-snippet, .other-snippet {
+      .essay-snippet, .design-snippet, .other-snippet, .file-snippet {
         padding-left:0.875rem;
         border-left:0.125rem solid rgba($theme-colour, 0);
         margin-bottom:1rem;
