added files style

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -101,11 +101,10 @@ body {
       max-width:40rem;
       margin:auto;
     }
-    .basic, .about, .essay, .post, .home {
+    .basic, .about, .essay, .post, .home, .files, .blog {
       margin:3rem auto;
     }
     .blog {
-      margin:3rem auto;
       a {
         color:#333;
         text-decoration:none;
