--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Barlow:500,500i&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@0;1&display=swap');
 
-$theme-colour: red;
+$theme-colour: #ff2b35;
 $title-font: "Barlow Semi Condensed", sans-serif;
 $body-font: "Barlow", sans-serif;
 $serif-font: "Lora", Georgia, serif;
@@ -83,7 +83,11 @@ body {
 
           }
           a.current {
-            color:red;
+            color:$theme-colour;
+            border-bottom: 1px solid rgba($theme-colour, 0);
+            &:hover {
+              border-bottom: 1px solid $theme-colour;
+            }
           }
         }
       }
@@ -100,9 +104,13 @@ body {
       width:90%;
       max-width:40rem;
       margin:auto;
-    }
-    .basic, .about, .essay, .post, .home, .files, .blog, .404 {
       margin:3rem auto;
+      svg {
+        width:100%;
+        max-width:30rem;
+        margin:0 auto 1rem;
+        display:flex;
+      }
     }
     .blog {
       a {
@@ -128,7 +136,6 @@ body {
       }
     }
     .work {
-      margin:3rem auto;
       h2 {
         margin:3rem 0 1rem;
         font-family: $title-font;
@@ -420,8 +427,10 @@ body {
         font-family:$serif-font;
       }
     }
+
     .theme-colour-background {
       background: $theme-colour;
+      fill: $theme-colour;
     }
   }
   > footer {
