style changes and referencing fix

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -406,8 +406,14 @@ body {
           display:block;
         }
       }
-      .reference {
-        font-size:0.9rem;
+      .references {
+        a {
+          text-decoration: none;
+          color:$theme-colour;
+          &:hover {
+            text-decoration:underline;
+          }
+        }
       }
 
     }
