--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,12 +8,8 @@
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/icons/favicon.ico">
     {% feed_meta %}
     {% seo %}
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
-
-    </script>
-    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/styleselect.js">
-
-    </script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" ></script>
   </head>
   <body>
     {% include nav.html %}
