--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1> {{ page.title}} </h1>
-  <p class="post-byline"> {{ page.date | date_to_string}} - {{ page.author }}</p>
+  <p class="post-byline"> {{ page.date | date_to_string}} - {{ page.author }} - {{ page.subtitle }}</p>
   <div class="post-body">
   {{ content }}
   </div>
