minor style tweaks to post byline

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -431,6 +431,7 @@ body {
       .post-byline {
         text-align:center;
         color:#888;
+        font-family: $title-font;
         margin-bottom:2rem;
       }
       .post-body {
