--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,14 @@
   <div class="break about">
     <h4>Scott Belcher + 2020</h4>
   </div>
+  <div class="break acknowledgement">
+     <p>
+       I acknowledge the Kaurna people as the Traditional Owners and Custodians of the land on which I live and work. This website was created on stolen land and sovereignty has never been ceded.
+      </p>
+  </div>
   <div class="break contact">
+    <a href="{{ site.baseurl }}/"><i class="sxb icon"></i></a>
     <a href="mailto:scottbelcher@live.com.au"><i class="email icon"></i></a>
     <a href="https://twitter.com/scottxbee"><i class="twitter icon"></i></a>
-    <a href="{{ site.baseurl }}/"><i class="sxb icon"></i></a>
   </div>
 </footer>
