--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="flex screen-only">
   <div class="break about">
-    <h4>Scott Belcher + 2020</h4>
+    <h4>Scott Belcher + tbc</h4>
   </div>
   <div class="break acknowledgement">
      <p>
@@ -10,6 +10,5 @@
   <div class="break contact">
     <a href="{{ site.baseurl }}/"><i class="sxb icon"></i></a>
     <a href="mailto:scottbelcher@live.com.au"><i class="email icon"></i></a>
-    <a href="https://twitter.com/scottxbee"><i class="twitter icon"></i></a>
   </div>
 </footer>
