--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -78,6 +78,7 @@ body {
         position:fixed;
         top:0;
         width:100%;
+        z-index:100;
         nav {
           width: 100%;
           max-width: 1200px;
@@ -572,7 +573,8 @@ body {
     box-shadow:0 -1px 5px #8883;
     color:#888;
     margin:1rem auto 0;
-    font-size:0.95rem;
+    font-size:0.7rem;
+    line-height: 1.2em;
     padding:0 1rem;
     position:fixed;
     bottom:0;
@@ -585,8 +587,6 @@ body {
       }
     }
     .acknowledgement {
-      font-size:0.7rem;
-      line-height: 1.2em;
       @media only screen and (min-width:600px) {
         width:50%;
         max-width:600px;
